# note_book

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  run.sh
note_book/: app.py  db.py  exceptions.py  models.py
note_book/configs/: config.py  config.yaml
note_book/static/: styles.css
note_book/templates/: contacts.html  create_contact.html  delete_contact.html  find_contact.html  menu.html  update_contact.html
tests/: test_app.py
